--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-<!DOCTYPE html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/logo.png"><title>covid-update</title><link href="/covid-data.github.io/tree/main/css/app.db021829.css" rel="preload" as="style"><link href="/covid-data.github.io/blob/main/js/app.4cec3fe9.js" rel="preload" as="script"><link href="/covid-data.github.io/blob/main/js/chunk-vendors.874b14d2.js" rel="preload" as="script"><link href="/covid-data.github.io/blob/main/css/app.db021829.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but covid-update doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div><script src="/covid-data.github.io/blob/main/js/chunk-vendors.874b14d2.js"></script><script src="/covid-data.github.io/blob/main/js/app.4cec3fe9.js"></script></body></html>
+<!DOCTYPE html>
+  <html lang="">
+    <head>
+      <meta charset="utf-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width,initial-scale=1">
+      <link rel="icon" href="logo.png"><title>covid-update</title>
+      <link href="css/app.db021829.css" rel="preload" as="style">
+      <link href="js/app.4cec3fe9.js" rel="preload" as="script">
+      <link href="js/chunk-vendors.874b14d2.js" rel="preload" as="script">
+      <link href="css/app.db021829.css" rel="stylesheet">
+    </head>
+    
+    <body>
+      <noscript>
+        <strong>We're sorry but covid-update doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      </noscript>
+      <div id="app">
+      </div>
+      <script src="js/chunk-vendors.874b14d2.js"></script>
+      <script src="js/app.4cec3fe9.js"></script>
+    </body>
+</html>
